Image Itereation through all the data

--- a/Image process.ipynb
+++ b/Image process.ipynb
@@ -32,13 +32,10 @@
     "    for img in os.listdir(path):\n",
     "        img_array = cv2.imread(os.path.join(path,img))\n",
     "        plt.imshow(img_array)\n",
-    "        plt.show()\n",
-    "        break\n",
-    "    break\n",
-    "                   \n",
-    "\n",
-    "# from tensorflow.keras.models import Sequential\n",
-    "# from tensorflow.keras.layers import Conv2D, MaxPooling2D, Dense, Flatten"
+    "#         plt.show()\n",
+    "#         break\n",
+    "#     break\n",
+    "                "
    ]
   },
   {
@@ -147,7 +144,7 @@
     "\n",
     "new_array = cv2.resize(img_array,(IMG_SIZE,IMG_SIZE))\n",
     "plt.imshow(new_array)\n",
-    "plt.show()"
+    "# plt.show()"
    ]
   },
   {
@@ -172,9 +169,7 @@
    "id": "92def68a",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "#FGGG#F"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -185,11 +180,6 @@
    },
    "outputs": [],
    "source": [
-    "# X_train = np.loadtxt('input.csv',delimiter=',')\n",
-    "# Y_train = np.loadtxt('labels.csv',delimiter=',')\n",
-    "\n",
-    "# X_test = np.loadtxt('input.csv',delimiter=',')\n",
-    "# Y_test = np.loadtxt('labels.csv',delimiter=',')\n",
     "\n"
    ]
   },
@@ -200,14 +190,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# X_train = X_train.reshape(len(X_train),100,100,3)\n",
-    "# Y_train = Y_train.reshape(len(Y_train),1)\n",
-    "\n",
-    "# X_test = X_test.reshape(len(X_test),100,100,3)\n",
-    "# Y_test = Y_test.reshape(len(Y_test),1)\n",
-    "\n",
-    "# X_train = X_train/255.0\n",
-    "# X_test = X_test/255.0\n"
+    "\n"
    ]
   },
   {
@@ -216,12 +199,7 @@
    "id": "c2737840",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# print(\"Shape of X_train : \", X_train.shape )\n",
-    "# print(\"Shape of Y_train : \", Y_train.shape )\n",
-    "# print(\"Shape of X_test : \", X_test.shape )\n",
-    "# print(\"Shape of Y_test : \", Y_test.shape )"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -229,9 +207,7 @@
    "id": "cb2ebdf0",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# X_train[1,:]"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
