Update previous code

--- a/Image process.ipynb
+++ b/Image process.ipynb
@@ -174,7 +174,7 @@
     "        path = os.path.join(DATADIR, category)\n",
     "        class_num = CATEGORIES.index(category)\n",
     "\n",
-    "        for img in tqdm(os.listdir(path)): # allows for the generation of progress bars\n",
+    "        for img in tqdm(os.listdir(path)): # allows generate of progress bars\n",
     "            try:\n",
     "                img_array = cv2.imread(os.path.join(path,img))\n",
     "                new_array = cv2.resize(img_array,(IMG_SIZE,IMG_SIZE))\n",
@@ -244,9 +244,9 @@
     }
    ],
    "source": [
-    "#check shuffle\n",
-    "for x in training_data[:10]:\n",
-    "    print(x[1])\n"
+    "# #check shuffle\n",
+    "# for x in training_data[:10]:\n",
+    "#     print(x[1])\n"
    ]
   },
   {
@@ -256,7 +256,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n"
+    "\n",
+    "    "
    ]
   },
   {
