--- a/Image process.ipynb
+++ b/Image process.ipynb
@@ -31,7 +31,7 @@
     "    path = os.path.join(DATADIR, category)\n",
     "    for img in os.listdir(path):\n",
     "        img_array = cv2.imread(os.path.join(path,img))\n",
-    "        plt.imshow(img_array)\n",
+    "#         plt.imshow(img_array)\n",
     "#         plt.show()\n",
     "#         break\n",
     "#     break\n",
@@ -101,7 +101,7 @@
     }
    ],
    "source": [
-    " print(img_array)"
+    "#  print(img_array)"
    ]
   },
   {
@@ -119,7 +119,7 @@
     }
    ],
    "source": [
-    "print(img_array.shape)"
+    "# print(img_array.shape)"
    ]
   },
   {
@@ -140,7 +140,7 @@
     }
    ],
    "source": [
-    "IMG_SIZE=200\n",
+    "IMG_SIZE=224\n",
     "\n",
     "new_array = cv2.resize(img_array,(IMG_SIZE,IMG_SIZE))\n",
     "plt.imshow(new_array)\n",
@@ -251,30 +251,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "85e5eec0",
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "    "
+    "#VGG16 model \n",
+    "import keras,os\n",
+    "from keras.models import Sequential\n",
+    "from keras.layers import Dense, Conv2D, MaxPool2D , Flatten\n",
+    "from keras.preprocessing.image import ImageDataGenerator"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "id": "c2737840",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Found 1328 images belonging to 5 classes.\n",
+      "Found 32 images belonging to 5 classes.\n"
+     ]
+    }
+   ],
+   "source": [
+    "trdata = ImageDataGenerator()\n",
+    "# traindata = training_data\n",
+    "traindata = trdata.flow_from_directory(directory=\"Dataset\",target_size=(224,224))\n",
+    "tsdata = ImageDataGenerator()\n",
+    "testdata = tsdata.flow_from_directory(directory=\"test\", target_size=(224,224))"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "id": "cb2ebdf0",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "model = Sequential()\n",
+    "model.add(Conv2D(input_shape=(224,224,3),filters=64,kernel_size=(3,3),padding=\"same\", activation=\"relu\"))\n",
+    "model.add(Conv2D(filters=64,kernel_size=(3,3),padding=\"same\", activation=\"relu\"))\n",
+    "model.add(MaxPool2D(pool_size=(2,2),strides=(2,2)))\n",
+    "\n",
+    "model.add(Conv2D(filters=128, kernel_size=(3,3), padding=\"same\", activation=\"relu\"))\n",
+    "model.add(Conv2D(filters=128, kernel_size=(3,3), padding=\"same\", activation=\"relu\"))\n",
+    "model.add(MaxPool2D(pool_size=(2,2),strides=(2,2)))\n",
+    "\n",
+    "model.add(Conv2D(filters=256, kernel_size=(3,3), padding=\"same\", activation=\"relu\"))\n",
+    "model.add(Conv2D(filters=256, kernel_size=(3,3), padding=\"same\", activation=\"relu\"))\n",
+    "model.add(Conv2D(filters=256, kernel_size=(3,3), padding=\"same\", activation=\"relu\"))\n",
+    "model.add(MaxPool2D(pool_size=(2,2),strides=(2,2)))\n",
+    "\n",
+    "model.add(Conv2D(filters=512, kernel_size=(3,3), padding=\"same\", activation=\"relu\"))\n",
+    "model.add(Conv2D(filters=512, kernel_size=(3,3), padding=\"same\", activation=\"relu\"))\n",
+    "model.add(Conv2D(filters=512, kernel_size=(3,3), padding=\"same\", activation=\"relu\"))\n",
+    "model.add(MaxPool2D(pool_size=(2,2),strides=(2,2)))\n",
+    "\n",
+    "model.add(Conv2D(filters=512, kernel_size=(3,3), padding=\"same\", activation=\"relu\"))\n",
+    "model.add(Conv2D(filters=512, kernel_size=(3,3), padding=\"same\", activation=\"relu\"))\n",
+    "model.add(Conv2D(filters=512, kernel_size=(3,3), padding=\"same\", activation=\"relu\"))\n",
+    "model.add(MaxPool2D(pool_size=(2,2),strides=(2,2)))"
+   ]
   },
   {
    "cell_type": "code",
