Import ADAM optimizer and complete the model

--- a/Image process.ipynb
+++ b/Image process.ipynb
@@ -228,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "id": "7f4c75ce",
    "metadata": {},
    "outputs": [],
@@ -242,8 +242,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "id": "ff3de55c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\acer\\anaconda3\\envs\\sdgp\\lib\\site-packages\\keras\\optimizers\\legacy\\adam.py:117: UserWarning: The `lr` argument is deprecated, use `learning_rate` instead.\n",
+      "  super().__init__(name, **kwargs)\n"
+     ]
+    }
+   ],
+   "source": [
+    "#import ADAM optimizer\n",
+    "from keras.optimizers import Adam\n",
+    "opt = Adam(lr=0.001)\n",
+    "model.compile(optimizer=opt, loss=keras.losses.categorical_crossentropy, metrics=['accuracy'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b6a282cb",
    "metadata": {},
    "outputs": [],
    "source": []
