--- a/Image process.ipynb
+++ b/Image process.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 80,
    "id": "efa4a7bd",
    "metadata": {},
    "outputs": [],
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 81,
    "id": "46f540f0",
    "metadata": {},
    "outputs": [],
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 82,
    "id": "e3736840",
    "metadata": {},
    "outputs": [],
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 83,
    "id": "fe5a1030",
    "metadata": {},
    "outputs": [
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 84,
    "id": "ad93c48d",
    "metadata": {},
    "outputs": [
@@ -82,11 +82,11 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 107/107 [00:00<00:00, 320.14it/s]\n",
-      "100%|██████████| 342/342 [00:04<00:00, 82.95it/s]\n",
-      "100%|██████████| 267/267 [00:01<00:00, 220.17it/s]\n",
-      "100%|██████████| 293/293 [00:01<00:00, 258.32it/s]\n",
-      "100%|██████████| 319/319 [00:03<00:00, 81.64it/s]\n"
+      "100%|██████████| 107/107 [00:00<00:00, 354.76it/s]\n",
+      "100%|██████████| 342/342 [00:02<00:00, 118.53it/s]\n",
+      "100%|██████████| 267/267 [00:00<00:00, 415.51it/s]\n",
+      "100%|██████████| 293/293 [00:00<00:00, 462.65it/s]\n",
+      "100%|██████████| 319/319 [00:02<00:00, 128.22it/s]\n"
      ]
     }
    ],
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 85,
    "id": "e25ef384",
    "metadata": {},
    "outputs": [
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 86,
    "id": "92def68a",
    "metadata": {},
    "outputs": [],
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 87,
    "id": "70eb55e0",
    "metadata": {
     "scrolled": true
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 88,
    "id": "85e5eec0",
    "metadata": {},
    "outputs": [],
@@ -167,13 +167,19 @@
     "#VGG16 model \n",
     "import keras,os\n",
     "from keras.models import Sequential\n",
-    "from keras.layers import Dense, Conv2D, MaxPool2D , Flatten\n",
-    "from keras.preprocessing.image import ImageDataGenerator"
+    "from keras.layers import Input,Dense, Conv2D, MaxPool2D , Flatten\n",
+    "from keras.preprocessing.image import ImageDataGenerator\n",
+    "\n",
+    "from tensorflow.keras.layers import Input,Flatten,Dense\n",
+    "from tensorflow.keras.models import Model\n",
+    "from tensorflow.keras.applications.vgg16 import VGG16\n",
+    "from tensorflow.keras.models import Sequential\n",
+    "from glob import glob"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 89,
    "id": "c2737840",
    "metadata": {},
    "outputs": [
@@ -196,71 +202,155 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
-   "id": "cb2ebdf0",
+   "execution_count": 90,
+   "id": "78b5797c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = Sequential()\n",
-    "model.add(Conv2D(input_shape=(224,224,3),filters=64,kernel_size=(3,3),padding=\"same\", activation=\"relu\"))\n",
-    "model.add(Conv2D(filters=64,kernel_size=(3,3),padding=\"same\", activation=\"relu\"))\n",
-    "model.add(MaxPool2D(pool_size=(2,2),strides=(2,2)))\n",
-    "\n",
-    "model.add(Conv2D(filters=128, kernel_size=(3,3), padding=\"same\", activation=\"relu\"))\n",
-    "model.add(Conv2D(filters=128, kernel_size=(3,3), padding=\"same\", activation=\"relu\"))\n",
-    "model.add(MaxPool2D(pool_size=(2,2),strides=(2,2)))\n",
-    "\n",
-    "model.add(Conv2D(filters=256, kernel_size=(3,3), padding=\"same\", activation=\"relu\"))\n",
-    "model.add(Conv2D(filters=256, kernel_size=(3,3), padding=\"same\", activation=\"relu\"))\n",
-    "model.add(Conv2D(filters=256, kernel_size=(3,3), padding=\"same\", activation=\"relu\"))\n",
-    "model.add(MaxPool2D(pool_size=(2,2),strides=(2,2)))\n",
-    "\n",
-    "model.add(Conv2D(filters=512, kernel_size=(3,3), padding=\"same\", activation=\"relu\"))\n",
-    "model.add(Conv2D(filters=512, kernel_size=(3,3), padding=\"same\", activation=\"relu\"))\n",
-    "model.add(Conv2D(filters=512, kernel_size=(3,3), padding=\"same\", activation=\"relu\"))\n",
-    "model.add(MaxPool2D(pool_size=(2,2),strides=(2,2)))\n",
-    "\n",
-    "model.add(Conv2D(filters=512, kernel_size=(3,3), padding=\"same\", activation=\"relu\"))\n",
-    "model.add(Conv2D(filters=512, kernel_size=(3,3), padding=\"same\", activation=\"relu\"))\n",
-    "model.add(Conv2D(filters=512, kernel_size=(3,3), padding=\"same\", activation=\"relu\"))\n",
-    "model.add(MaxPool2D(pool_size=(2,2),strides=(2,2)))"
+    "IMAGE_SIZE=[224,224]\n",
+    "vgg=VGG16(input_shape=IMAGE_SIZE+[3],weights='imagenet',include_top=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
-   "id": "7f4c75ce",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Flattening and initialise\n",
-    "model.add(Flatten())\n",
-    "model.add(Dense(units=4096,activation=\"relu\"))\n",
-    "model.add(Dense(units=4096,activation=\"relu\"))\n",
-    "model.add(Dense(units=2, activation=\"softmax\"))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 45,
-   "id": "ff3de55c",
+   "execution_count": 91,
+   "id": "d8af6892",
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\acer\\anaconda3\\envs\\sdgp\\lib\\site-packages\\keras\\optimizers\\legacy\\adam.py:117: UserWarning: The `lr` argument is deprecated, use `learning_rate` instead.\n",
-      "  super().__init__(name, **kwargs)\n"
+      "5\n"
      ]
     }
    ],
    "source": [
-    "#import ADAM optimizer\n",
-    "from keras.optimizers import Adam\n",
-    "opt = Adam(lr=0.001)\n",
-    "model.compile(optimizer=opt, loss=keras.losses.categorical_crossentropy, metrics=['accuracy'])"
+    "folders=glob(r\"C:\\Users\\acer\\Downloads\\w1867202\\SDGP\\Dataset\\*\")\n",
+    "print(len(folders))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b8501de0",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "id": "a330a1cd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: \"model_3\"\n",
+      "_________________________________________________________________\n",
+      " Layer (type)                Output Shape              Param #   \n",
+      "=================================================================\n",
+      " input_4 (InputLayer)        [(None, 224, 224, 3)]     0         \n",
+      "                                                                 \n",
+      " block1_conv1 (Conv2D)       (None, 224, 224, 64)      1792      \n",
+      "                                                                 \n",
+      " block1_conv2 (Conv2D)       (None, 224, 224, 64)      36928     \n",
+      "                                                                 \n",
+      " block1_pool (MaxPooling2D)  (None, 112, 112, 64)      0         \n",
+      "                                                                 \n",
+      " block2_conv1 (Conv2D)       (None, 112, 112, 128)     73856     \n",
+      "                                                                 \n",
+      " block2_conv2 (Conv2D)       (None, 112, 112, 128)     147584    \n",
+      "                                                                 \n",
+      " block2_pool (MaxPooling2D)  (None, 56, 56, 128)       0         \n",
+      "                                                                 \n",
+      " block3_conv1 (Conv2D)       (None, 56, 56, 256)       295168    \n",
+      "                                                                 \n",
+      " block3_conv2 (Conv2D)       (None, 56, 56, 256)       590080    \n",
+      "                                                                 \n",
+      " block3_conv3 (Conv2D)       (None, 56, 56, 256)       590080    \n",
+      "                                                                 \n",
+      " block3_pool (MaxPooling2D)  (None, 28, 28, 256)       0         \n",
+      "                                                                 \n",
+      " block4_conv1 (Conv2D)       (None, 28, 28, 512)       1180160   \n",
+      "                                                                 \n",
+      " block4_conv2 (Conv2D)       (None, 28, 28, 512)       2359808   \n",
+      "                                                                 \n",
+      " block4_conv3 (Conv2D)       (None, 28, 28, 512)       2359808   \n",
+      "                                                                 \n",
+      " block4_pool (MaxPooling2D)  (None, 14, 14, 512)       0         \n",
+      "                                                                 \n",
+      " block5_conv1 (Conv2D)       (None, 14, 14, 512)       2359808   \n",
+      "                                                                 \n",
+      " block5_conv2 (Conv2D)       (None, 14, 14, 512)       2359808   \n",
+      "                                                                 \n",
+      " block5_conv3 (Conv2D)       (None, 14, 14, 512)       2359808   \n",
+      "                                                                 \n",
+      " block5_pool (MaxPooling2D)  (None, 7, 7, 512)         0         \n",
+      "                                                                 \n",
+      " flatten_8 (Flatten)         (None, 25088)             0         \n",
+      "                                                                 \n",
+      " dense_18 (Dense)            (None, 5)                 125445    \n",
+      "                                                                 \n",
+      "=================================================================\n",
+      "Total params: 14,840,133\n",
+      "Trainable params: 14,840,133\n",
+      "Non-trainable params: 0\n",
+      "_________________________________________________________________\n"
+     ]
+    }
+   ],
+   "source": [
+    "x=Flatten()(vgg.output)\n",
+    "prediction=Dense(len(folders),activation='softmax')(x)\n",
+    "model=Model(inputs=vgg.input,outputs=prediction)\n",
+    "model.summary()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f317ccd5",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "id": "89b0d61e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for layer in vgg.layers:\n",
+    "    layer.trainable=False\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cb2ebdf0",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7f4c75ce",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ff3de55c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
