Import Adam optimizer

--- a/Image process.ipynb
+++ b/Image process.ipynb
@@ -312,7 +312,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f317ccd5",
+   "id": "cd0219d9",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -338,11 +338,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 97,
    "id": "7f4c75ce",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "\n",
+    "#import ADAM optimizer\n",
+    "from keras.optimizers import Adam\n",
+    "opt = Adam(lr=0.001)\n",
+    "model.compile(optimizer=opt, loss=keras.losses.categorical_crossentropy, metrics=['accuracy'])\n"
+   ]
   },
   {
    "cell_type": "code",
